--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@300&family=Merriweather:wght@400;700&family=Public+Sans&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
