--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@600&family=Merriweather:wght@400;700&family=Public+Sans&display=swap');
-@tailwind base;
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@200;300;400;500&family=Merriweather:wght@400;700&display=swap');@tailwind base;
 @tailwind components;
 @tailwind utilities;
